@@ -2,6 +2,7 @@ AV2 Changelog :: version a4.5
 
 * Reduced penguin spawning (to 1/3)
 * Reduced penguin drop rate (to 1/2)
+* Wandering bison wanders near owner
 
 > Fix crash when killing entity without registered lang file name - FOR REAL THIS TIME
 > Fix bug where fireball keeps exploding when held on ground
